--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
 		"@fontsource-variable/inter": "^5.0.5",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/lodash.debounce": "^4.0.7",
 		"autoprefixer": "^10.4.14",
 		"postcss": "^8.4.26",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
+		"sass": "^1.63.6",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"tailwindcss": "^3.3.3",
@@ -28,6 +30,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"lodash.debounce": "^4.0.8",
 		"masto": "^5.11.4"
 	}
 }
